added highlight.js for code github style code highlighting

--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -29,6 +29,11 @@
         <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         -->
+	<!-- code highlights js -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/github.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/highlight.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/languages/clojure.min.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
     </head>
     <body>
 
