--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>{{ page.title }}</title>
         <meta name="author" content="{{ site.author.name }}" />
-        <link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="{{ ASSET_PATH }}/css/syntax.css" type="text/css" />
@@ -52,12 +52,12 @@
             <div class="footer">
               <div class="contact">
 		<p>
-		  <a href="http://jborden.github.io/atom.xml">RSS</a>
+		  <a href="https://jborden.github.io/atom.xml">RSS</a>
 		</p>
 	      </div>
 	      <div class="contact">
                   <p>
-                        <a href="http://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br />
+                        <a href="https://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br />
                     </p>
                 </div>
             </div>
