--- a/assets/themes/tom/css/screen.css
+++ b/assets/themes/tom/css/screen.css
@@ -8,26 +8,26 @@
   Customizations
 */
 
-@font-face {
-    font-family: "Computer Modern";
-    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');
-}
-@font-face {
-    font-family: "Computer Modern Bold";
-    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunsx.otf');
-    font-weight: bold;
-}
-@font-face {
-    font-family: "Computer Modern Italic";
-    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunsi.otf');
-    font-style: italic, oblique;
-}
-@font-face {
-    font-family: "Computer Modern Bold Italic";
-    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunbxo.otf');
-    font-weight: bold;
-    font-style: italic, oblique;
-}
+/* @font-face { */
+/*     font-family: "Computer Modern"; */
+/*     src: url('https://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf'); */
+/* } */
+/* @font-face { */
+/*     font-family: "Computer Modern Bold"; */
+/*     src: url('https://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunsx.otf'); */
+/*     font-weight: bold; */
+/* } */
+/* @font-face { */
+/*     font-family: "Computer Modern Italic"; */
+/*     src: url('https://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunsi.otf'); */
+/*     font-style: italic, oblique; */
+/* } */
+/* @font-face { */
+/*     font-family: "Computer Modern Bold Italic"; */
+/*     src: url('https://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunbxo.otf'); */
+/*     font-weight: bold; */
+/*     font-style: italic, oblique; */
+/* } */
 
 @font-face {
     font-family: 'Latin Modern Roman';
